src/test/deca/context/valid/provided/class_field2.deca
class A {
  int x = 0;
  float y = 2.3;
}
