src/test/deca/context/invalid/provided/testi29.deca
//Resultats :
//Erreur contextuelle
//Ligne 7: Expecting a class
{
    int x;
    int y;
    y.x = x;
}